[project]
dependencies = [
  "numpy==1.26.4",
  "torch==2.6.0",
  "torchvision==0.21.0",
  "transformers>=4.51.3",
  "diffusers",
  "peft>=0.15.2",
  "einops>=0.8.1",
  "packaging>=25.0",
  "setuptools>=80.9.0",
  "sentencepiece>=0.2.0",
  "ruff==0.11.7",
]
description = "Post train bidirectional Qwen-Image-Edit into Causal"
name = "Qwen-Image-Edit-Causal"
readme = "README.md"
requires-python = ">=3.11"
version = "0.3.0"

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

torchaudio = [{ index = "pytorch-cu124" }]
diffusers = { git = "https://github.com/huggingface/diffusers.git", rev = "6a1904eb065ba4daad6bfe784cc3064852755acf" }


[[tool.uv.index]]
explicit = true
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"


[tool.ruff]
indent-width = 4
line-length = 88
target-version = "py311"

[tool.ruff.lint]
ignore = ["E741", "E731"]
select = ["UP006", "UP007", "E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.pyright]
typeCheckingMode = "basic"
reportIncompatibleVariableOverride = false
reportIncompatibleMethodOverride = false
reportUnusedCallResult = false
